--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -17,4 +17,8 @@
       sit amet consectetur adipisicing elit.
     </p>
   </nz-card>
+  <nz-card>
+    <h1>hello</h1>
+    <p>you now can use this site to go to our world</p>
+  </nz-card>
 </ng-container>
